2020/08/26 Generate() function is implemented
2020/08/26 IterateN() function is implemented
2020/08/25 Iterate() function is implemented
2020/08/25 Empty() function is implemented
2020/08/24 NoneMatch() method is implemented
2020/08/24 AllMatch() method is implemented
2020/08/24 Renamed StreamFromSlice() to Of()
2020/08/24 AnyMatch() is implemented
2020/08/23 Count() is implemented
2020/08/23 Reduce() function is implemented
2020/08/23 * Got rid of sliceStream and mapStream
2020/08/23 Reduce() is implemented
2020/08/22 ToSlice() is implemented
2020/08/21 Skip() is implemented
2020/08/20 Peek() is implemented
2020/08/19 Fixed all Sorted(), implemented all Limit()
2020/08/18 Debugging ... added trace() function which should be added to every tests.
2020/08/17 Sorted is not correctly implemented, I need to fix it
2020/08/16 implemented Sorted method