@@ -1,0 +1,7 @@
+#!/bin/bash
+
+source ~/bin/switch_go2.bash
+
+go tool go2go test 
+
+rm *.go
